캐릭터 애니메이션 최종 수정 완료 / 다리, 무기 등 나머지 부위 추가할 예정

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
 ProjectPlan.PNG
-FirstGame-bin/graphics/only_png/
-FirstGame-bin/graphics/back/
-FirstGame-bin/graphics/player/
+FirstGame-bin/graphics/
