--- a/FirstGame/FirstGame.vcxproj
+++ b/FirstGame/FirstGame.vcxproj
@@ -178,6 +178,7 @@
     <ClCompile Include="GameObjects\Character.cpp" />
     <ClCompile Include="GameObjects\Monster.cpp" />
     <ClCompile Include="GameObjects\Player.cpp" />
+    <ClCompile Include="DataTables\MonsterTable.cpp" />
     <ClCompile Include="Player2.cpp" />
     <ClCompile Include="Scenes\Scene.cpp" />
     <ClCompile Include="Scenes\SceneGame.cpp" />
@@ -210,6 +211,7 @@
     <ClInclude Include="GameObjects\Character.h" />
     <ClInclude Include="GameObjects\Monster.h" />
     <ClInclude Include="GameObjects\Player.h" />
+    <ClInclude Include="DataTables\MonsterTable.h" />
     <ClInclude Include="Player2.h" />
     <ClInclude Include="Scenes\Scene.h" />
     <ClInclude Include="Scenes\SceneGame.h" />
