--- a/FirstGame/FirstGame.vcxproj
+++ b/FirstGame/FirstGame.vcxproj
@@ -155,11 +155,11 @@
   <ItemGroup>
     <ClCompile Include="Animation\AnimationClip.cpp" />
     <ClCompile Include="Animation\AnimationController.cpp" />
+    <ClCompile Include="GameObjects\DamageTextEffect.cpp" />
     <ClCompile Include="GameObjects\EntityEffect.cpp" />
     <ClCompile Include="GameObjects\BulletHitEffect.cpp" />
     <ClCompile Include="GameObjects\DieEffect.cpp" />
     <ClCompile Include="GameObjects\BaseUI.cpp" />
-    <ClCompile Include="Framework\Collision.cpp" />
     <ClCompile Include="GameObjects\BaseBullet.cpp" />
     <ClCompile Include="GameObjects\BaseGun.cpp" />
     <ClCompile Include="DataTables\StringTable.cpp" />
@@ -196,11 +196,11 @@
     <ClInclude Include="3rd\rapidcsv.h" />
     <ClInclude Include="Animation\AnimationController.h" />
     <ClInclude Include="Animation\AnimationClip.h" />
+    <ClInclude Include="GameObjects\DamageTextEffect.h" />
     <ClInclude Include="GameObjects\EntityEffect.h" />
     <ClInclude Include="GameObjects\BulletHitEffect.h" />
     <ClInclude Include="GameObjects\DieEffect.h" />
     <ClInclude Include="GameObjects\BaseUI.h" />
-    <ClInclude Include="Framework\Collision.h" />
     <ClInclude Include="GameObjects\BaseBullet.h" />
     <ClInclude Include="GameObjects\BaseGun.h" />
     <ClInclude Include="DataTables\DataTable.h" />
